# kdis-code

KDIS/: CMakeLists.txt
KDIS/Examples/Building/KDIS_LIB/: CMakeLists.txt
KDIS/Examples/PDU/Entity_State_PDU/: KDIS.cpp
KDIS/KDIS/DataTypes/: APA.cpp  APA.h  AirPlatformAppearance.cpp  AirPlatformAppearance.h  ArealObjectAppearance.cpp  ArealObjectAppearance.h  LifeFormAppearance.cpp  LifeFormAppearance.h  LinearObjectAppearance.cpp  LinearObjectAppearance.h  ObjectAppearance.cpp  ObjectAppearance.h  PointObjectAppearance.cpp  PointObjectAppearance.h
KDIS/KDIS/Network/: Connection.cpp
KDIS/Tests/: CMakeLists.txt
KDIS/Tests/TestData/: APAData.hpp  ArealObjectAppearanceData.hpp  LinearObjectAppearanceData.hpp
KDIS/Tests/TestUtilities/: CMakeLists.txt  GenTestData.cpp  WriteStreamAsHeader.hpp
KDIS/Tests/UnitTests/: AppearanceAccessTests.cpp  DataType_EncodeDecode6.cpp
KDIS/Tests/gtest/: CMakeLists.txt
